--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.14"
+    "@astrojs/tailwind": "^4.0.0",
+    "astro": "^2.10.14",
+    "astro-seo": "^0.8.0",
+    "tailwindcss": "^3.3.3"
   }
 }
