--- a/website/package.json
+++ b/website/package.json
@@ -14,5 +14,9 @@
     "astro": "^2.10.14",
     "astro-seo": "^0.8.0",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-plugin-astro": "^0.29.0"
   }
 }
