--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "cSpell.language": "en,es-ES,lorem",
-  "cSpell.enableFiletypes": [
-    "sass"
-  ]
+  "cSpell.enableFiletypes": ["sass"],
+  "cSpell.words": ["webp"]
 }
