feat: react component scroll shoes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
   "cSpell.language": "en,es-ES,lorem",
   "cSpell.enableFiletypes": ["sass"],
-  "cSpell.words": ["nike", "webp"]
+  "cSpell.words": ["heroicons", "nike", "webp"]
 }
