--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/react": "^2.3.2",
     "@astrojs/tailwind": "^4.0.0",
+    "@heroicons/react": "^2.0.18",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "astro": "^2.10.14",
